# Leidokos-Testing

./: .travis.yml  CMakeLists.txt  README.md
appveyor/: init.bat  test_kaleidoscope_module.bat
cmake/: execute_process.cmake  execute_process.macros.cmake  log.macros.cmake
python/: prepare_testing.py
scripts/: before_install.sh  build.sh  configure.sh  test.sh  test_kaleidoscope_module.sh
testing/: specification.yaml
testing/t1/: specification.yaml
travis/: before_install.sh  test_kaleidoscope_module.sh
